@@ -1,22 +1,30 @@
 package com.maciejsusala.task_inksolutions.service.impl;
 
+import com.fasterxml.jackson.core.JsonProcessingException;
+import com.fasterxml.jackson.databind.JsonNode;
+import com.fasterxml.jackson.databind.ObjectMapper;
 import com.maciejsusala.task_inksolutions.model.NewsArticle;
 import com.maciejsusala.task_inksolutions.service.NewsProcessorService;
+import com.theokanning.openai.completion.chat.ChatCompletionRequest;
+import com.theokanning.openai.completion.chat.ChatMessage;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.kafka.annotation.KafkaListener;
 import org.springframework.kafka.core.KafkaTemplate;
 import com.theokanning.openai.service.OpenAiService;
-import com.theokanning.openai.completion.CompletionRequest;
 import org.springframework.stereotype.Service;
 import reactor.core.publisher.Mono;
 import reactor.core.scheduler.Schedulers;
 
+import java.util.List;
+
 @Service
 public class NewsProcessorServiceImpl implements NewsProcessorService {
+    private static final Logger logger = LoggerFactory.getLogger(NewsProcessorServiceImpl.class);
 
     private final OpenAiService openAiService;
     private final KafkaTemplate<String, NewsArticle> kafkaTemplate;
-
 
 
     public NewsProcessorServiceImpl(KafkaTemplate<String, NewsArticle> kafkaTemplate, @Value("${OPEN_AI_KEY}") String openAiApiKey) {
@@ -37,29 +45,35 @@ public class NewsProcessorServiceImpl implements NewsProcessorService {
     private NewsArticle processWithGpt4(NewsArticle newsArticle) {
         String prompt = String.format(
                 "Analyze the following news article and determine if it's local or global news. " +
-                        "If it's local, specify the location it belongs to. Article: %s",
+                        "If the news is about a specific city in the USA, set 'local' to true and 'location' to the city name only (without state, country, etc.). " +
+                        "If the news is about a city outside the USA or does not mention a specific city, set 'local' to false and 'location' to 'Global'. " +
+                        "Return the result in JSON format with fields 'local' and 'location'. " +
+                        "Article: %s",
                 newsArticle.getContent()
         );
 
-        CompletionRequest completionRequest = CompletionRequest.builder()
+        ChatCompletionRequest completionRequest = ChatCompletionRequest.builder()
+                .messages(List.of(new ChatMessage("user", prompt)))
                 .model("gpt-4o-mini")
-                .prompt(prompt)
                 .maxTokens(100)
                 .build();
 
-        String response = openAiService.createCompletion(completionRequest).getChoices().get(0).getText();
+        String response = openAiService.createChatCompletion(completionRequest).getChoices().getFirst().getMessage().getContent();
+        logger.info("Chat response: {}", response);
 
-        if(response.toLowerCase().contains("local")) {
-            newsArticle.setLocal(true);
-            newsArticle.setLocation(extractLocation(response));
-        } else {
+        response = response.replaceAll("```json", "").replaceAll("```", "").trim();
+
+        ObjectMapper objectMapper = new ObjectMapper();
+        try {
+            JsonNode jsonNode = objectMapper.readTree(response);
+            newsArticle.setLocal(jsonNode.get("local").asBoolean());
+            newsArticle.setLocation(jsonNode.get("location").asText());
+        } catch (JsonProcessingException e) {
+            logger.error("Error parsing response: {}", e.getMessage());
             newsArticle.setLocal(false);
+            newsArticle.setLocation("Global");
         }
-        return newsArticle;
-    }
 
-    private String extractLocation(String response) {
-        // TODO Implement location extraction logic here
-        return "";
+        return newsArticle;
     }
 }
